--- a/_css/ChallengeLayout_OC.css
+++ b/_css/ChallengeLayout_OC.css
@@ -125,46 +125,3 @@ img, object, embed, video {
 }
 }
 
-/* Desktop Layout: 1025px to a max of 1232px.  Inherits styles from: Mobile Layout and Tablet Layout. */
-
-/* @media only screen and (min-width: 769px) { 
-	Bumping desktop min width to be greater than the 1024 landscape orientation of iPad because the desktop rules did not give enough space on iPad in landscape mode 
-*/
-@media only screen and (min-width: 1025px) {
-.gridContainer {
-	/*width: 89.6428%;
-	max-width: 1232px;
-	padding-left: 0.1785%;
-	padding-right: 0.1785%;*/
-	width: 100%;
-	margin: auto;/*	background-color : lightblue; *//* for debugging light blue for desktop */
-}
-#LayoutDivHeader {
-	clear: both;
-	float: left;
-	margin-left: 0;
-	width: 100%;
-	display: block;
-}
-#RibbonNavigation {
-	clear: both;
-	float: left;
-	margin-left: 0;
-	width: 100%;
-	display: block;
-}
-#ContentScreens {
-	clear: both;
-	float: left;
-	margin-left: 0;
-	width: 100%;
-	display: block;
-}
-#Footer {
-	clear: both;
-	float: left;
-	margin-left: 0;
-	width: 100%;
-	display: block;
-}
-}
